=================
Changes for Crate
=================

Unreleased
==========

 - Fix: Order by ``_raw`` and/or ``_id`` did not work.

 - Upgraded Elasticsearch to 1.7.2

 - Fix: support compressed ``_source``

 - Updated crate-admin to 0.15.0 which includes following changes:

   - display cluster checks on overview page

   - display relative Crate process CPU usage as bar chart and show number of
     cores per node

 - Allow quoted subscript expressions in SQL statement. This will allow
   supporting various client applications on Windows that use ODBC.

 - Added ``try_cast`` scalar function.

 - Added cluster checks which are exposed via the ``sys.checks`` table.

 - Added the ``number of partitions`` system check.

 - Exposed the cluster gateway settings

 - Added ``os_info`` column to ``sys.nodes`` table.
   Currently the column only lists the number of available processors in the JVM
   (which is usually equal to the number of cores of the CPU).

 - Upgraded Elasticsearch to 1.7.1
   This update changes the default value for delayed allocation of unassigned
   shards (see: `https://crate.io/docs/en/latest/configuration.html#unassigned`_).
   Also updated the upstream of EC2 discovery module

2015/09/18 0.51.4
=================

 - Fixed calculation of the EC2 discovery retry delay in order to prevent
   exceeding of the AWS API request limit.

 - Updated crate-admin to 0.14.5 which includes following changes:

   - display ``NULL`` instead of empty cell in console results table

2015/09/15 0.51.3
=================

 - Display column names that contain a dot correctly in information schema
   and result column headers

2015/08/09 0.51.2
=================

 - Updated crate-admin to 0.14.4 which includes the following changes:

   - updated Intercom to support new messaging features. The Intercom service is
     disabled if UDC is disabled on the Crate server.

 - Fixed handling of non-deterministic functions
