@@ -5,6 +5,8 @@ Changes for Crate
 Unreleased
 ==========
 
+ - Fix: Querying the information_schema caused a NPE if there was an orphaned partition
+
  - Fix: Order by ``_raw`` and/or ``_id`` did not work.
 
  - Upgraded Elasticsearch to 1.7.2
